--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <button id="button" onclick="changeButtonState()">Pause</button>
-  <p>Your Score is : <span id="score"></span><span id="gameOver"></span></p>
+  <p>Score : <span id="score"></span><span id="gameOver"></span></p>
   <div id="container">
     <div id="headCell" class="cell"></div>
     <div id="tail1" class="cell"></div>
